# ai-provider-watch

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_LICENSE.md  GOVERNANCE.md  MAINTAINERS.md  MANIFEST.in  NOTICE  README.md  REUSE.toml  ROADMAP.md  SECURITY.md  SOURCE_OWNERS.md  SUPPORT.md  TRADEMARKS.md  action.yml  llms-full.txt  llms.txt  pyproject.toml  setup.py
.codex-plugin/: plugin.json
.github/: AGENTS.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  downstream_mapping.yml  missing_event.yml  new_source.yml  (+3 more)
data/: AGENTS.md
docs/: AGENTS.md  agent-consumption.md  architecture.md  consumer-api.md  plugin-contract.md
registries/: agent-apps.json  models.json  provider-surfaces.json  providers.json
schemas/: adoption-scenarios.schema.json  agent-dashboard.schema.json  candidate-action-queue.schema.json  candidate-quality.schema.json  candidate-to-event-packet.schema.json  candidate.schema.json  ecosystem-mapping.schema.json  event-detail.schema.json  event.schema.json  feed-freshness.schema.json  impact.schema.json  json-feed.schema.json  live-event.schema.json  live-feed.schema.json  live-health.schema.json  live-provenance.schema.json  llm-review-request.schema.json  llm-review-result.schema.json  observation.schema.json  operations-report.schema.json  promotion-readiness.schema.json  release-automation-readiness.schema.json  release-dry-run.schema.json  release-evidence-index.schema.json  release-manifest.schema.json  release-publication-packet.schema.json  release-verification.schema.json  repo-impact.schema.json  slack-payload.schema.json  source-catalog.schema.json  source-coverage.schema.json  source-owner-packet.schema.json  source.schema.json  v1-launch-gate.schema.json  webhook-payload.schema.json
scripts/: github_action_summary.py
sources/: AGENTS.md  registry.json
tests/: test_action_metadata.py  test_adoption_scenarios.py  test_agent_dashboard.py  test_candidate_action_queue.py  test_candidate_event_packet.py  test_candidate_event_scaffold.py  test_candidate_quality.py  test_candidates.py  test_cli.py  test_codex_plugin.py  test_consumer_api.py  test_coverage.py  test_downstream_smoke_fixtures.py  test_ecosystem_mappings.py  test_event_scaffold.py  test_feeds.py  test_governance_docs.py  test_issue_templates.py  test_launch_gate.py  test_live_feed_consumption.py  test_live_publisher.py  test_llm_review.py  test_mcp_readonly.py  test_missing_event_issue_triage.py  test_notifications.py  test_operations_report.py  test_package_data.py  test_promotion_readiness.py  test_prompt_injection_redteam.py  test_release.py  test_remote_feed.py  test_repo_impact.py  test_reuse_compliance.py  test_review_pr.py  test_source_catalog.py  test_source_owner_packet.py  test_source_refresh_gate.py  test_sources.py  test_validation.py  test_workflows.py
(+549 files in other folders)
